--- a/templates/instr-docs.html
+++ b/templates/instr-docs.html
@@ -56,7 +56,7 @@ h1,h2,h3{line-height:1.2}
 <div class="instruction_container">
 <h2><a name="i_{{instr.name}}">{{instr.name}}</a></h2>
 
-<p>{{instr.description}}</p>
+<p><pre>{{instr.description|e}}</pre></p>
 
 <p>
 <table>
